Add Nic portfolio and update loader text

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <p>Start date: <strong>January 30, 2026</strong> • Compare Tom, Joe, and Nic side by side.</p>
       </div>
       <div class="actions">
-        <button id="loadProvided" class="ghost">Load Tom & Joe Portfolios</button>
+        <button id="loadProvided" class="ghost">Load All Portfolios</button>
         <button id="clearAll" class="danger">Clear All</button>
       </div>
     </header>
