Use single load-and-refresh button

--- a/index.html
+++ b/index.html
@@ -14,18 +14,13 @@
         <p>Start date: <strong>January 30, 2026</strong> • Compare Tom, Joe, and Nic side by side.</p>
       </div>
       <div class="actions">
-        <button id="loadProvided" class="ghost">Load All Portfolios</button>
+        <button id="loadProvided" class="ghost">Load + Refresh Portfolios</button>
         <button id="clearAll" class="danger">Clear All</button>
       </div>
     </header>
 
     <section class="panel controls">
-      <h2>Live Price Controls</h2>
-      <div class="control-grid">
-        <div class="inline-actions">
-          <button id="refreshPrices">Refresh Live Data</button>
-        </div>
-      </div>
+      <h2>Live Data</h2>
       <p class="status">Yahoo Finance data is proxied server-side for reliability and CORS safety.</p>
       <p id="status" class="status" aria-live="polite"></p>
     </section>
